# HackathonMultiAgentSystem

./: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
api/: main.py  routes.py  schemas.py
src/: llm_client.py  mas_runtime.py  web_search_tool.py
src/MAS/: __init__.py
src/MAS/agents/: __init__.py  literature_rag_agent.py  methodologies_agent.py  properties_agent.py  solver_agent.py
src/MAS/orchestrator/: __init__.py  agent_orchestrator.py
src/NeuralSearch/: answer_generator.py  main.py  models.py  reranker.py  url_parcer.py  utils.py  web_search.py
src/RAG/: rag_main.py
src/RAG/data/artifacts/: manifest.json
src/RAG/data/artifacts/chunked_reports/: Organicheskaya_khimia_uchebnoe_posobie_dlya_vuzov_T_1_Traven_V_F.json  Organicheskaya_khimia_uchebnoe_posobie_dlya_vuzov_T_3_Traven_V_F.json  ______.json
src/RAG/src/: config.py  io_utils.py
src/RAG/src/answering/: answerer.py  client.py  postprocess.py  prompts.py  schemas.py
src/RAG/src/artifacts/: __init__.py  loader.py
src/RAG/src/rerank/: client.py  prompts.py  reranker.py  schemas.py
src/RAG/src/retrieval/: __init__.py  embedder.py  faiss_store.py  retriever.py
src/RAG/src/routing/: __init__.py  multi_company.py  router.py
src/RAG/src/submission/: __init__.py  build.py  schema.py
src/webapp/: chat_store.py  event_hub.py  service.py
testing/: calculate_metrics.py  questions_chatgpt_answers.json  questions_gt.json  questions_model_answers.json
webui/static/css/: styles.css
webui/static/js/: chat.js
webui/templates/: chat.html
(+13 files in other folders)
